--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Sanscrit_Keybard — 3 vertical blocks</title>
+  <title>Sanscrit_Keybard</title>
   <style>
     @font-face { font-family: 'Andika'; src: url('./fonts/Andika-Regular.ttf') format('truetype'); font-weight: normal; font-style: normal; }
     :root { --kbd-width: 360px; --gap: 8px; --key-height: 46px; }
