--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ body.dark .block::before {
   ];
 
 
-const KEYS_ALT_DEF = [
+const KEYS_ALT_DEF_CLEAN = [
   ['अ','आ','इ','ई','उ','ऊ'],
   ['ऋ','ॠ','ऌ','ऌ२'],
   ['ए','ऐ','ओ','औ'],
@@ -606,14 +606,15 @@ const KEYS_ALT_DEF = [
   ['य','र','ल','व'],
   ['श','ष','स'],
   ['ह','ळ','क्ष'],
-  [' ा',' ि',' ी',' ु',' ू'],        
-  ['ृ',' ॄ',' ॢ',' ॣ'],
-  ['े',' ै',' ो',' ौ',' ं',' ः'],
-  ['्',' ँ'],
+  ['ा','ि','ी','ु','ू'],
+  ['ृ','ॄ','ॢ','ॣ'],
+  ['े','ै','ो','ौ','ं','ः'],
+  ['्','ँ'],
   ['०','१','२','३','४','५'],
   ['६','७','८','९'],
   ['।','॥']
 ];
+
 
 
   function containsDevanagari(str) {
