--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ body.dark .block::before {
   ];
 
 
-const KEYS_ALT_DEF_CLEAN = [
+const KEYS_ALT_DEF = [
   ['अ','आ','इ','ई','उ','ऊ'],
   ['ऋ','ॠ','ऌ','ऌ२'],
   ['ए','ऐ','ओ','औ'],
