--- a/index.html
+++ b/index.html
@@ -776,8 +776,78 @@ textarea#mainText {
 }
 
 
+#saveBtn {
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: background-color .2s ease, color .2s ease, opacity .2s ease;
+}
+
+body:not(.dark) #saveBtn {
+  background-color: #4a90e2
+;
+  color: #111;
+}
+
+body.dark #saveBtn {
+  background-color: #1e1e1e;
+  color: #fff;
+}
+
+body:not(.dark) #saveBtn:hover {
+  background-color: #a0d2ff
+;
+}
+
+body.dark #saveBtn:hover {
+  background-color: #2a2a2a;
+}
 
 
+
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #bdbdbd transparent;
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #bdbdbd;
+  border-radius: 8px;
+  border: 2px solid transparent;
+  background-clip: padding-box;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #9e9e9e;
+}
+
+body.dark * {
+  scrollbar-color: #6e6e6e transparent;
+}
+
+body.dark *::-webkit-scrollbar-thumb {
+  background-color: #6e6e6e;
+}
+
+body.dark *::-webkit-scrollbar-thumb:hover {
+  background-color: #8a8a8a;
+}
 
   </style>
 </head>
